--- a/_posts/2014-09-22-features-2.markdown
+++ b/_posts/2014-09-22-features-2.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: stable.png
 category: Features
-title: Solid Java - Minimal Dependencies
+title: Solid Java - No Dependencies
 description: |
 ---
-  Technically, CWS is written in Java 8 / Java EE 7. It only relies on the SLF4J logging framework and nothing else. This way, it will deploy in any Java EE 7+ compliant Containers or Java EE7+ Compliant Cloud and work. The database layer is written using JPA, so the underlying database can be changed to whichever is desired. The initially supported databases include H2, HyperSQL & PostgreSQL. Support for other databases can be made easily.
+  Technically, CWS is written in Java 8 / Java EE 7. This way, it should deploy in any Java EE 7+ compliant Containers or Java EE7+ Compliant Cloud and work. The database layer is written using JPA, so the underlying database can be changed to whichever is desired. The initially supported databases include H2, HyperSQL & PostgreSQL. Support for other databases can be made easily.
