--- a/_posts/2014-09-24-features-4.markdown
+++ b/_posts/2014-09-24-features-4.markdown
@@ -5,4 +5,10 @@ category: Features
 title: Circles of Trust
 description: |
 ---
-The CWS focuses on Circles of Trust, where Members of a Circle will have varying level of access to the Data belonging to the Circle. This is achieved by a combination of Symmetric and Asymmetric Encryption, guaranteeing that only Members with Access can view Data. Private & Symmetric Keys are stored encrypted, as is the Data Objects given. It should be noted, that the Data Objects stored can be anything, CWS is expectiny an array of bytes as source and will return an array of bytes, what those bytes actually contain is irrelevant for CWS - but CWS does support storing the encrypted data with a type, which can be used by the systems using it, to ensure that all Data Objects can be correctly read out.
+<b>Use Case 1:</b> <i>Two or more parties wishes to securely share data.</i>
+
+<b>Use Case 2:</b> <i>Travelling to an insecure region, wishing to access data but fear loosing device and thus control.</i>
+
+Introducing "Circles of Trust". A simply concept, whereby a number of parties can work together securely. A Trustee is an Account, granted access to a Circle. An account can be a member, company, organization or simply a device. Each is having their own access credentials, which is used to unlock a Circle Key, adding or removing someone Trustees is simple and will not affect the Circle Data. A series of Asymmetric and Symmetric cryptographic operations will guarantee this.
+
+Oh, and if your device is stolen, either remove the account, or log in with the credentials and invalidate it. An invalid account is still working, is still a Trustee - but cannot access any data.
